assets/css/style.css
@import url("https://fonts.googleapis.com/css2?family=GFS+Didot&family=Merriweather:wght@300;400;700&family=Roboto:wght@300;400&display=swap");
*,
*::before,
*::after {
    box-sizing: border-box;
}


/* COLOR THEME: https://icolorpalette.com/imagepalette/color-palette-ideas-from-sky-afterglow-red-at-morning-image-11 */

:root {
    /* ---COLOR THEME----------------- */
    /* DOMINANT color:*/
    --dominant-color: rgb(36, 35, 49);
    /* COMPLEMENTARY color: */
    --complimentary-color: rgb(0, 117, 196);
    /* ACCENT color:  */
    /* --accent-color: #efa00b; */
    --accent-color: rgb(239, 160, 11);
    /* Call-To-Action color:  */
    /* --cta-color: #c33c54; */
    --cta-color: rgb(195, 60, 84);
    /* Text colors:  */
    /* --text-color: #fbfefb; */
    --text-color: rgb(251, 254, 251);
    /* --link-color: #097ddb; */
    /* --link-color: #fbfefb; */
    --link-color: rgb(251, 254, 251);
    /* --link-hover-color: #c33c54; */
    --link-hover-color: rgb(245, 102, 128);
    /* --link-active-color: #efa00b; */
    --link-active-color: rgb(239, 160, 11);
    /* special color themes */
    --articles-bg-blue-color: rgba(9, 125, 219, 0.09);
    --articles-bg-dark-color: rgba(36, 35, 49, 0.09);
    /* ---FONTS----------------- */
    /* Paragraphs and Greek: font-family: 'GFS Didot', serif; */
    /* Headings: font-family: 'Merriweather', serif; */
    /* Backup: font-family: 'Roboto', sans-serif; */
    /* HEADER Title */
    --header-title-font: "GFS Didot", serif;
    /* Heading Font */
    --heading-font: "Merriweather", serif;
    /* Sub-heading font */
    --sub-heading-font: "Merriweather", serif;
    /* Paragraph font */
    --paragraph-font: "GFS Didot", serif;
}

html,
body {
    /* height: 100%; */
    font-family: var(--paragraph-font);
    font-size: min(max(15px, 4vw), 18px);
    font-weight: 400;
    text-align: justify;
    text-justify: inter-word;
    margin: 0;
    padding: 0;
    background-color: rgba(36, 35, 49, 0.88);
    color: var(--text-color);
}

body {
    display: flex;
    flex-direction: column;
    min-width: 300px;
    width: 100%;
    min-height: 100vh;
}

h1,
h2,
h3,
h4,
h5,
h6 {
    color: var(--accent-color);
}

main {
    padding-top: 20px;
    padding-bottom: 2rem;
    width: 90%;
    min-height: calc(80vh - 130px);
    max-width: 767px;
    margin-left: auto;
    margin-right: auto;
    flex-grow: 1;
}

.center-it {
    padding: 0;
    justify-content: center;
    align-items: center;
    margin-top: auto;
    margin-bottom: auto;
}

a {
    color: var(--link-color);
}

a:hover {
    color: var(--link-hover-color);
    transition: 0.3s;
}

a:active {
    color: var(--link-active-color);
}


/* HEADER */

header {
    font-family: var(--header-title-font);
    font-size: min(max(20px, 4vw), 36px);
    font-weight: 700;
    align-items: center;
    justify-content: space-between;
    width: 100%;
    margin: 0;
    box-shadow: 0 0 12px 0 rgb(0 0 0 / 7%), 0 4px 4px rgb(0 0 0 / 5%);
    background-color: var(--dominant-color);
}

.navbar {
    margin-left: auto;
    margin-right: auto;
    align-self: center;
    align-items: center;
    align-content: center;
    padding: 0;
}


/* Override Bootstrap defaults*/

.container-fluid {
    flex-direction: column;
}

.navbar-dark .navbar-brand,
.navbar-dark .navbar-brand:focus,
.navbar-dark .navbar-brand:hover {
    color: var(--text-color);
}

.navbar-dark .navbar-nav .nav-link.active,
.navbar-dark .navbar-nav .show>.nav-link {
    box-shadow: 10px 10px 40px var(--complimentary-color) inset, 1px 1px 10px var(--cta-color);
}

.navbar-dark .navbar-nav .nav-link {
    color: var(--text-color);
}

.navbar-brand {
    font-size: min(max(18px, 4vw), 32px);
    margin: 0;
}

.navbar-brand a {
    color: var(--link-color);
    margin: auto;
    text-align: center;
}

.navbar-toggler {
    width: 100%;
    color: var(--text-color);
}

.navbar-collapse {
    text-align: center;
    width: 100%;
}

.logo-img-filtering {
    height: 6rem;
    filter: opacity(0.5) drop-shadow(0 0 0 var(--text-color));
    margin-top: 0.7rem;
}

.nav-link {
    opacity: 0.5;
    color: var(--link-color);
    width: 100%;
    font-size: min(max(16px, 6vw), 20px);
    text-transform: uppercase;
}

.nav-item {
    min-width: 150px;
    width: 100%;
    opacity: 0.8;
}

.nav-link.active {
    opacity: 1;
    -webkit-box-shadow: 20px 70px 50px var(--complimentary-color) inset, 0 0 0 var(--accent-color);
    -moz-box-shadow: 20px 70px 50px var(--complimentary-color) inset, 0 0 0 var(--accent-color);
    box-shadow: 20px 70px 50px var(--complimentary-color) inset, 0 0 0 var(--accent-color);
}

.nav-link:hover {
    opacity: 0.9;
    color: var(--link-hover-color);
    -webkit-box-shadow: 70px 70px 70px var(--complimentary-color) inset, 0 0 0 var(--accent-color);
    -moz-box-shadow: 70px 70px 70px var(--complimentary-color) inset, 0 0 0 var(--accent-color);
    box-shadow: 70px 70px 70px var(--complimentary-color) inset, 0 0 0 var(--accent-color);
    border: none;
    border-radius: 4px;
    transition: 0.3s;
}

#logo-wr {
    width: 100px;
    height: 100px;
    display: block;
    flex-direction: column;
    flex-direction: column;
}

.logo-link {
    display: block;
}

#logo-wr img {
    width: 100%;
    height: 100%;
    display: flex;
    flex-direction: row;
}

#header-title {
    font-size: 2em;
    color: var(--text-color);
    display: flex;
    flex-direction: column;
}

.nav-wr {
    display: flex;
    flex-direction: row;
    justify-content: space-between;
    align-items: center;
    width: 100%;
    margin: 0;
    padding: 0;
}


/* special classes to style different elements*/

.center-content {
    text-align: center;
    margin: 30px 0 0 0;
    padding: 15px 0 10px 0;
}

.heading-alignment {
    text-align: center;
    padding: 15px 0 0 0;
}

.center-p {
    font-size: small;
    text-align: center;
    margin: 0;
    letter-spacing: 0.1rem;
}
/* ... */

